--- a/homepage/src/app/component/navbar/navbar.component.html
+++ b/homepage/src/app/component/navbar/navbar.component.html
@@ -1,1 +1,24 @@
-<p>navbar works!</p>
+<div class="container-fluid ">
+    <div class="row navbarcontainer">
+        <div class="col-6">
+            <h1>gili</h1>
+
+
+        </div>
+        <div class="col-6">
+           <ul class="d-flex p-2 justify-content-evenly align-items-center align-self-center">
+            <li><img src="assets/arrowdown2.svg" alt=""><a href="">Products</a></li>
+            <li><img src="assets/arrowdown2.svg" alt=""><a href="">Renew Your Policy</a></li>
+            <li><img src="assets/arrowdown2.svg" alt=""><a href="">Claims</a></li>
+           <li><img src="assets/arrowdown2.svg" alt=""><a href="">Become a PoSP</a></li>
+           <li><img src="assets/arrowdown2.svg" alt=""><a href="">Contact us</a></li>
+           <li><button>Login ➡</button></li>
+         
+           </ul>
+
+
+        </div>
+
+    </div>
+
+</div>
