--- a/homepage/src/app/component/navbar/navbar.component.html
+++ b/homepage/src/app/component/navbar/navbar.component.html
@@ -8,6 +8,7 @@
         <div class="col-6">
            <ul class="d-flex p-2 justify-content-evenly align-items-center align-self-center">
             <li><img src="assets/arrowdown2.svg" alt=""><a href="">Products</a></li>
+            <li><img src="assets/arrowdown2.svg" alt=""><a href="">Inspection Status</a></li>
             <li><img src="assets/arrowdown2.svg" alt=""><a href="">Renew Your Policy</a></li>
             <li><img src="assets/arrowdown2.svg" alt=""><a href="">Claims</a></li>
            <li><img src="assets/arrowdown2.svg" alt=""><a href="">Become a PoSP</a></li>
