--- a/homepage/src/app/component/hero/hero.component.html
+++ b/homepage/src/app/component/hero/hero.component.html
@@ -1,1 +1,20 @@
-<p>hero works!</p>
+<div class="container-fluid">
+    <div class="rows">
+        <div class="col-12">
+
+            <div>
+                <h1>We Price Match Your Budget!</h1>
+            </div>
+         </div>
+    </div>
+    <div class="rows">
+        <div class="col-12 d-flex" >
+            <div class="imageholder"><img src="assets/car.svg" alt=""><div>
+                Car
+            </div></div>
+            <div class="imageholder"><img src="assets/bike-racing.svg" alt=""><figcaption>Bike</figcaption></div>
+            <div class="imageholder"><img src="assets/health-care.svg" alt=""><figcaption>Helath</figcaption></div>
+            <div class="imageholder"><img src="assets/insurance-time.svg" alt=""><figcaption>Term</figcaption></div>
+        </div>
+    </div>
+</div>
