--- a/homepage/src/app/component/navbar/navbar.component.html
+++ b/homepage/src/app/component/navbar/navbar.component.html
@@ -1,21 +1,28 @@
 <div class="container-fluid ">
     <div class="row navbarcontainer">
-        <div class="col-6">
+        <div class="col-4">
             <h1>gili</h1>
 
 
         </div>
-        <div class="col-6">
-           <ul class="d-flex p-2 justify-content-evenly align-items-center align-self-center">
-            <li><img src="assets/arrowdown2.svg" alt=""><a href="">Products</a></li>
-            <li><img src="assets/arrowdown2.svg" alt=""><a href="">Inspection Status</a></li>
-            <li><img src="assets/arrowdown2.svg" alt=""><a href="">Renew Your Policy</a></li>
-            <li><img src="assets/arrowdown2.svg" alt=""><a href="">Claims</a></li>
-           <li><img src="assets/arrowdown2.svg" alt=""><a href="">Become a PoSP</a></li>
-           <li><img src="assets/arrowdown2.svg" alt=""><a href="">Contact us</a></li>
-           <li><button>Login ➡</button></li>
+        <div class="col-8 d-flex p-2 justify-content-evenly align-items-center align-self-center">
+            <div><img src="assets/arrowdown2.svg" alt=""><a href="">Products</a></div>
+            <div><img src="assets/arrowdown2.svg" alt=""><a href="">Inspection Status</a></div>
+            <div><img src="assets/arrowdown2.svg" alt=""><a href="">Renew Your Policy</a></div>
+            <div><img src="assets/arrowdown2.svg" alt=""><a href="">Claims</a></div>
+            <div><img src="assets/arrowdown2.svg" alt=""><a href="">Become a PoSP</a></div>
+            <div><img src="assets/arrowdown2.svg" alt=""><a href="">Contact us</a></div>
+            <div><button>Login ➡</button></div>
+          <!--  <ul class="d-flex p-2 justify-content-evenly align-items-center align-self-center">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+           <li></li>
+           <li></li>
+           <li></li>
          
-           </ul>
+           </ul> -->
 
 
         </div>
