--- a/homepage/src/app/component/navbar/navbar.component.css
+++ b/homepage/src/app/component/navbar/navbar.component.css
@@ -1,7 +1,7 @@
 .navbarcontainer{
     background: #37AFD4;
     height: 80px;
-   
+    flex-shrink: 0;
 }
 h1{
 color: #F8FBFF;
@@ -11,6 +11,7 @@ font-size: 48px;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
+padding-left: 40px;
 }
 a{
 color: #F8FBFF;
@@ -21,6 +22,7 @@ font-style: normal;
 font-weight: 600;
 line-height: normal;
 letter-spacing: 0.32px;
+text-decoration: none;
 }
 ul{
     margin-top: 9px;
@@ -28,6 +30,8 @@ ul{
 li{
     list-style-type: none;
     list-style: none;
+    text-decoration: none;
+    letter-spacing: 8px;
 }
 button{
     border-radius: 8px;
@@ -38,10 +42,15 @@ padding: 8px 16px;
 
 align-items: center;
 gap: 8px; 
+max-width: 102px;
+max-height: 40px;
 color: #0B2C5C;
 font-family: Montserrat;
 font-size: 16px;
 font-style: normal;
 font-weight: 500;
 line-height: 24px; /* 150% */
+}
+img{
+    padding-right: 4px;
 }
