--- a/homepage/src/app/component/hero/hero.component.html
+++ b/homepage/src/app/component/hero/hero.component.html
@@ -3,18 +3,84 @@
         <div class="col-12">
 
             <div>
-                <h1>We Price Match Your Budget!</h1>
+                <h2 id="catchPhrase">We Price Match Your Budget!</h2>
             </div>
          </div>
     </div>
     <div class="rows">
-        <div class="col-12 d-flex" >
-            <div class="imageholder"><img src="assets/car.svg" alt=""><div>
-                Car
-            </div></div>
-            <div class="imageholder"><img src="assets/bike-racing.svg" alt=""><figcaption>Bike</figcaption></div>
-            <div class="imageholder"><img src="assets/health-care.svg" alt=""><figcaption>Helath</figcaption></div>
-            <div class="imageholder"><img src="assets/insurance-time.svg" alt=""><figcaption>Term</figcaption></div>
+        <div class="col-6  d-flex justify-content-around">
+       <!-- 1.car -->
+        <div class="imageholder">
+        <img src="assets/car.svg" alt="">
+        <div>
+            <h1>Car</h1>
         </div>
+     </div>
+     <!-- 2.Bike -->
+     <div class="imageholder">
+        <img src="assets/bike-racing.svg" alt="">
+        <div>
+            <h1>
+                Bike 
+            </h1>
+        </div>
+     </div>
+   <!--   3.health -->
+   <div class="imageholder">
+    <img src="assets/health-care.svg" alt="">
+    <div>
+        <h1>
+            Health
+           </h1>
+    </div>
+</div>
+
+  <!--   4.Term -->
+  <div class="imageholder">
+    <img src="assets/insurance-time.svg" alt="">
+    <div>
+        <h1>
+            Term
+        </h1>
+    </div>
+
+    
+    </div>
+    
+
+
+
+
+
+   </div>
+   <p>view more ...</p>
+
+  </div>
+
+<div class="col-6 d-flex">
+    <div >
+   <p id="letStart">
+        Let's Start!
+    </p>
+</div>
+<div>
+    <input placeholder="Enter Your Budget!" type="text">
+</div>
+<div><button type="button">Search</button></div>
+</div>
+
+
+  <div class="col-12 d-flex flex-row-reverse ">
+    <img src="
+    assets/cow.png" alt="" height="662">
+
+  </div>
+
+
+<div class="row">
+    <div class="col-6">
+        <p>
+            Let's Start
+        </p>
     </div>
 </div>
