--- a/homepage/src/app/component/hero/hero.component.html
+++ b/homepage/src/app/component/hero/hero.component.html
@@ -1,86 +1,112 @@
-<div class="container-fluid">
-    <div class="rows">
-        <div class="col-12">
-
-            <div>
-                <h2 id="catchPhrase">We Price Match Your Budget!</h2>
-            </div>
-         </div>
-    </div>
-    <div class="rows">
-        <div class="col-6  d-flex justify-content-around">
-       <!-- 1.car -->
-        <div class="imageholder">
-        <img src="assets/car.svg" alt="">
-        <div>
-            <h1>Car</h1>
-        </div>
-     </div>
-     <!-- 2.Bike -->
-     <div class="imageholder">
-        <img src="assets/bike-racing.svg" alt="">
-        <div>
-            <h1>
-                Bike 
-            </h1>
-        </div>
-     </div>
-   <!--   3.health -->
-   <div class="imageholder">
-    <img src="assets/health-care.svg" alt="">
-    <div>
-        <h1>
-            Health
-           </h1>
-    </div>
-</div>
-
-  <!--   4.Term -->
-  <div class="imageholder">
-    <img src="assets/insurance-time.svg" alt="">
-    <div>
-        <h1>
-            Term
-        </h1>
-    </div>
-
-    
-    </div>
-    
-
-
-
-
-
-   </div>
-   <p>view more ...</p>
-
-  </div>
-
-<div class="col-6 d-flex">
-    <div >
-   <p id="letStart">
-        Let's Start!
-    </p>
-</div>
-<div>
-    <input placeholder="Enter Your Budget!" type="text">
-</div>
-<div><button type="button">Search</button></div>
-</div>
-
-
-  <div class="col-12 d-flex flex-row-reverse ">
-    <img src="
-    assets/cow.png" alt="" height="662">
-
-  </div>
-
-
 <div class="row">
-    <div class="col-6">
-        <p>
-            Let's Start
-        </p>
+  <div class="col">
+    <div>
+      <h2 id="catchPhrase">We Price Match Your Budget!</h2>
+  </div>
+  <div class="contentHolder">
+    <!--  1.car -->
+            <div class="imageholder">
+             <img src="assets/car.svg" alt="">
+             <div>
+                 <h1>Car</h1>
+             </div>
+          </div>
+         <!--  2.Bike --> 
+        <div class="imageholder">
+             <img src="assets/bike-racing.svg" alt="">
+             <div>
+                 <h1>
+                     Bike 
+                 </h1>
+             </div>
+          </div>
+   <!--     3.health  -->
+        <div class="imageholder">
+         <img src="assets/health-care.svg" alt="">
+         <div>
+             <h1>
+                 Health
+                </h1>
+         </div>
+     </div>
+     
+       <!--   4.Term -->
+       <div class="imageholder">
+         <img src="assets/insurance-time.svg" alt="">
+         <div>
+             <h1>
+                 Term
+             </h1>
+         </div>
+       </div>
+          </div>
+
+          <div class="contentHolder">
+            <div>
+              <p id="letStart">
+                   Let's Start!
+               </p>
+           </div>
+           <div>
+               <input placeholder="Enter Your Budget!" type="text">
+           </div>
+           <div><button type="button">Search</button>
+          </div>
+            </div> 
+  
+            <div class="infoGraphics">
+              <div><h2>How it  work</h2></div>
+              <div><p>Enter your Budget/Expiring policy premium</p></div>
+              <div><p>Key-in your details</p></div>
+              <div><p>Explore best options within your budget</p></div>
+            </div>
+
+  
+
+
+
+
+
+
+
+
+
+  </div>
+
+  
+
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+  <div class="col">
+    <div class=" ">
+      <img src="
+      assets/cow.png" alt="" height="662">
+  
     </div>
+  </div>
 </div>
