--- a/homepage/src/app/component/navbar/navbar.component.html
+++ b/homepage/src/app/component/navbar/navbar.component.html
@@ -5,7 +5,7 @@
 
 
         </div>
-        <div class="col-8 d-flex p-2 justify-content-evenly align-items-center align-self-center">
+        <div class="navContent">
             <div><img src="assets/arrowdown2.svg" alt=""><a href="">Products</a></div>
             <div><img src="assets/arrowdown2.svg" alt=""><a href="">Inspection Status</a></div>
             <div><img src="assets/arrowdown2.svg" alt=""><a href="">Renew Your Policy</a></div>
